# stm32_3d

./: Cargo.toml  Embed.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
