[package]
name = "stm32_3d"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
nb = "1"
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt"]}
# panic-probe = { version = "0.3.1", features = ["print-defmt"] }
# defmt = "0.3"
# defmt-rtt = "0.4"
ssd1306 = "0.8.0"
embedded-graphics = "0.8.0"
libm = "0.2.11"
# format_no_std = "1.2.0"



[[bin]]
name = "stm32_3d"
test = false
bench = false

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"